--- a/reveal.js/drupal_performance.html
+++ b/reveal.js/drupal_performance.html
@@ -1,42 +1,42 @@
 <!doctype html>
 <html lang="en">
 
-	<head>
-		<meta charset="utf-8">
+  <head>
+    <meta charset="utf-8">
 
-		<title>Drupal performance</title>
-		<meta name="description" content="Drupal performance">
-		<meta name="author" content="Ignacio J. Bonelli">
+    <title>Drupal performance</title>
+    <meta name="description" content="Drupal performance">
+    <meta name="author" content="Ignacio J. Bonelli">
 
-		<meta name="apple-mobile-web-app-capable" content="yes" />
-		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
-		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/black.css" id="theme">
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
+    <link rel="stylesheet" href="css/reveal.css">
+    <link rel="stylesheet" href="css/theme/black.css" id="theme">
 
-		<!-- Code syntax highlighting -->
-		<link rel="stylesheet" href="lib/css/zenburn.css">
+    <!-- Code syntax highlighting -->
+    <link rel="stylesheet" href="lib/css/zenburn.css">
 
-		<!-- Printing and PDF exports -->
-		<script>
-			var link = document.createElement( 'link' );
-			link.rel = 'stylesheet';
-			link.type = 'text/css';
-			link.href = window.location.search.match( /print-pdf/gi ) ? 'css/print/pdf.css' : 'css/print/paper.css';
-			document.getElementsByTagName( 'head' )[0].appendChild( link );
-		</script>
+    <!-- Printing and PDF exports -->
+    <script>
+      var link = document.createElement( 'link' );
+      link.rel = 'stylesheet';
+      link.type = 'text/css';
+      link.href = window.location.search.match( /print-pdf/gi ) ? 'css/print/pdf.css' : 'css/print/paper.css';
+      document.getElementsByTagName( 'head' )[0].appendChild( link );
+    </script>
 
-		<!--[if lt IE 9]>
-		<script src="lib/js/html5shiv.js"></script>
-		<![endif]-->
-	</head>
+    <!--[if lt IE 9]>
+    <script src="lib/js/html5shiv.js"></script>
+    <![endif]-->
+  </head>
 
-	<body>
+  <body>
 
-		<div class="reveal">
+    <div class="reveal">
 
-			<!-- Any section element inside of this container is displayed as a slide -->
-			<div class="slides">
+      <!-- Any section element inside of this container is displayed as a slide -->
+      <div class="slides">
 
 <section>
   <section>
@@ -109,58 +109,132 @@
     </ul>
   </section>
   <section>
-    <h1>¿Nginx o Apache?</h1>
+    <h1>Caching</h1>
+    <p style="text-align: left;">Cosas a cachear:</p>
+    <ul>
+      <li>Código PHP compilado (APC)</li>
+      <li>Variables y datos ya procesados (Memcached/Redis)</li>
+      <li>Páginas completas generadas (Boost/Varnish)</li>
+      <li>Partes de páginas (Views/Panels)</li>
+    </ul>
+  </section>
+  <section>
+    <h2>Tráfico Anónimo vs LoggedIn</h2>
+      <ul>
+        <li>Tráfico Anónimo:</li>
+          <ul>
+            <li>Nada cambia: Podemos cachear la página entera</li>
+            <li>Así podemos evitar el webserver por completo (Varnish)</li>
+          </ul>
+        <li>LoggedIn:</li>
+          <ul>
+            <li>Algunas cosas no cambian</li>
+            <li>Es importante optimizar la velocidad para generar una página</li>
+            <li>Es importante hacer cosas para:
+              <ul>
+                <li>acceder a los datos mas rápido (Memcached/Redis)</li>
+                <li>correr el código mas rápido (APC/PHP-FPM)</li>
+              </ul>
+            </li>
+          </ul>
+      </ul>
+  </section>
+  <section>
+    <h1>Demoras en el server</h1>
+    <ul>
+      <li>Servidor Web</li>
+      <li>Correr PHP (PHP-FPM vs mod_php)</li>
+      <li>Servidor de Base de datos: (<a href="https://www.drupal.org/project/mongodb">MongoDB</a> & Syslog)</li>
+    </ul>
+  </section>
+  <section>
+    <h2>¿Que podemos hacer <br>con Drupal? (I)</h2>
+    <ul>
+      <li>¿Que viene con core?
+        <ul>
+          <li>Manejo de cache integrado: <br><span style="margin-left:2em">Configuration -> Development -> Performance</span></li>
+          <li>Debemos deshabilitar los modulos que no usamos</li>
+          <li>Correr cron manualmente (poorsman's cron genera demoras)</li>
+          <li>Configuración del cache de Views y Panels</li>
+          <li>Syslog vs DBlog</li>
+        </ul>
+      </li>
+    </ul>
+  </section>
+  <section>
+    <h2>¿Que podemos hacer <br>con Drupal? (II)</h2>
+    <ul>
+      <li>Modulos que podemos usar:
+        <ul>
+          <li><a href="https://www.drupal.org/project/boost">Boost</a></li>
+          <li><a href="https://www.drupal.org/project/performance">Performance</a></li>
+          <li></li>
+        </ul>
+      </li>
+    </ul>
   </section>
 
 <section>
 * Que trae Drupal y como configurarlo para una mejor performance
-** Que viene con core
-** Modulos que podemos usar
+** 
+** 
 * Que podemos hacer/usar fuera de Drupal?
 ** Configurando Varnish (en Linux)
 ** Configurando Memcache/Redis (en Linux)
 </section>
 
   <section>
+    <h1>Probando la performance</h1>
+    <ul>
+      <li>Doc Zim: "Strees Test And WebSite Performance"</li>
+      <li>Herramientas SVN sysadmin...</li>
+      <li>Servicios Online...</li>
+      <li>Munin, webstats...</li>
+    </ul>
+  </section>
+  <section>
     <h3>Algo para el camino...</h3>
     <ul>
-      <li>Drupalcon 2014 Austin: <a href="https://austin2014.drupal.org/comment/2293.html">Planning for performance</a> (<a href="http://www.slideshare.net/jrbeeman/drupalcon-austin-planning-for-performance">Slides</a> + <a href="https://www.youtube.com/watch?v=AG7C7DoBt7Q">YouTube</a>)</li>
+      <li>Drupalcon 2013 Portland: <br><span style="margin-left:4em"><a href="https://portland2013.drupal.org/node/2208.html">Performance testing</a> (<a href="https://portland2013.drupal.org/sites/default/files/slides/PerformanceTesting_0.pdf">Slides</a> + <a href="https://www.youtube.com/watch?v=YfgmJE27b74">YouTube</a>)</span></li>
+      <li>Drupalcon 2014 Austin: <br><span style="margin-left:4em"><a href="https://austin2014.drupal.org/comment/2293.html">Planning for performance</a> (<a href="http://www.slideshare.net/jrbeeman/drupalcon-austin-planning-for-performance">Slides</a> + <a href="https://www.youtube.com/watch?v=AG7C7DoBt7Q">YouTube</a>)</span></li>
       <li>Drupal7 vs Drupal8: <a href="https://www.appnovation.com/blog/drupal-7-vs-drupal-8-performance-comparison">appnovation</a> y <a href="http://alexrayu.com/blog/drupal-739-vs-drupal-8-rc1-performance">AlexRayu</a></li>
+      <li>Drupal community docs: <a href="https://www.drupal.org/node/326504">Caching to improve performance</a></li>
+      <li><a href="http://colans.net/blog/drupal-7-performance-optimization-options-and-checklist">Drupal 7 Performance Optimization Options and Checklist</a></li>
     </ul>
   </section>
 </section>
 
-			</div>
+      </div>
 
-		</div>
+    </div>
 
-		<script src="lib/js/head.min.js"></script>
-		<script src="js/reveal.js"></script>
+    <script src="lib/js/head.min.js"></script>
+    <script src="js/reveal.js"></script>
 
-		<script>
+    <script>
 
-			// Full list of configuration options available at:
-			// https://github.com/hakimel/reveal.js#configuration
-			Reveal.initialize({
-				controls: true,
-				progress: true,
-				history: true,
-				center: true,
+      // Full list of configuration options available at:
+      // https://github.com/hakimel/reveal.js#configuration
+      Reveal.initialize({
+        controls: true,
+        progress: true,
+        history: true,
+        center: true,
 
-				transition: 'slide', // none/fade/slide/convex/concave/zoom
+        transition: 'slide', // none/fade/slide/convex/concave/zoom
 
-				// Optional reveal.js plugins
-				dependencies: [
-					{ src: 'lib/js/classList.js', condition: function() { return !document.body.classList; } },
-					{ src: 'plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-					{ src: 'plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-					{ src: 'plugin/highlight/highlight.js', async: true, condition: function() { return !!document.querySelector( 'pre code' ); }, callback: function() { hljs.initHighlightingOnLoad(); } },
-					{ src: 'plugin/zoom-js/zoom.js', async: true },
-					{ src: 'plugin/notes/notes.js', async: true }
-				]
-			});
+        // Optional reveal.js plugins
+        dependencies: [
+          { src: 'lib/js/classList.js', condition: function() { return !document.body.classList; } },
+          { src: 'plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+          { src: 'plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+          { src: 'plugin/highlight/highlight.js', async: true, condition: function() { return !!document.querySelector( 'pre code' ); }, callback: function() { hljs.initHighlightingOnLoad(); } },
+          { src: 'plugin/zoom-js/zoom.js', async: true },
+          { src: 'plugin/notes/notes.js', async: true }
+        ]
+      });
 
-		</script>
+    </script>
 
-	</body>
+  </body>
 </html>
