Trabajando en la presentacion de performance

--- a/reveal.js/drupal_performance.html
+++ b/reveal.js/drupal_performance.html
@@ -49,16 +49,18 @@
       <li>Casi toda mi carrera profesional trabajando en sistemas</li>
       <li>Docente de Informática1 en la UTN (programación en C)</li>
       <li>Fan de Linux y el Opensource</li>
-      <ul>Y en mis tiempos libres:
+      <p style="text-align: left;">Y en mis tiempos libres:</p>
+      <ul>
         <li>Padre de dos</li>
         <li>Fan de todo lo referente a SciFi</li>
         <li>Deporte! Correr, nadar y remar.</li>
       </ul>
-      <li>Mas sobre mi y contacto: <a href="http://www.nachodigital.com.ar/es">www.nachodigital.com.ar</a></li>
+      <p>Mas sobre mi y contacto: <a href="http://www.nachodigital.com.ar/es">www.nachodigital.com.ar</a></p>
     </ul>
   </section>
   <section>
     <h2>¿Como mejorar <br>la performance en Drupal?</h2>
+    <br>
     <ul>
       <li>Drupal's cache</li>
       <li>Otros proyectos opensource al rescate:</li>
