--- a/reveal.js/drupal_performance.html
+++ b/reveal.js/drupal_performance.html
@@ -72,8 +72,16 @@
     </ul>
   </section>
   <section>
-    <h2>Drupal's Stack</h2>
+    <h2>Drupal's Stack (I)</h2>
+    <img src="files/WebStack.png"/>
+  </section>
+  <section>
+    <h2>Drupal's Stack (II)</h2>
     <img src="files/Architecture.png"/>
+  </section>
+  <section>
+    <h2>Drupal's Stack (III)</h2>
+    <img src="files/Scaling.png"/>
   </section>
   <section>
     <h1>¿Nginx o Apache? (I)</h1>
@@ -139,7 +147,7 @@
         <li>LoggedIn:</li>
           <ul>
             <li>Algunas cosas no cambian</li>
-            <li>Mejorar la velocidad de generacón de la página</li>
+            <li>Mejorar la velocidad de generación de la página</li>
             <li>Es importante hacer cosas para:
               <ul>
                 <li>Acceder a los datos mas rápido (Memcached/Redis)</li>
@@ -181,6 +189,15 @@
           <li></li>
         </ul>
       </li>
+    </ul>
+  </section>
+  <section>
+    <h2>Principio KISS</h2>
+    <h3>(Keep it simple stupid)</h3>
+    <ul>
+      <li>Mas modulos = Mas complejidad</li>
+      <li>Mas complejidad... No aconsejable!</li>
+      <li>Mejor APC, Memcache, y Varnish!</li>
     </ul>
   </section>
 
