--- a/reveal.js/drupal_services.html
+++ b/reveal.js/drupal_services.html
@@ -489,6 +489,20 @@ drush dl -y restui ; drush en -y restui
         </li>
       </ul>
   </section>
+  <section>
+    <p style="text-align: left;">Headless Drupal:</p>
+      <ul>
+        <li><a href="http://valuebound.com/resources/blog/drupal-8-headless-hello-world">Drupal 8 Headless Hello World</a></li>
+        <li>Headless Drupal & Node.js
+          <ul style="font-size:80%;">
+            <li><a href="http://blog.openlucius.com/en/blog/headless-drupal-nodejs-part-13-drupal-8-restful">Drupal 8 RESTful</a></li>
+            <li><a href="http://blog.openlucius.com/en/blog/headless-drupal-nodejs-part-23-nodejs">Node.js</a></li>
+            <li><a href="http://blog.openlucius.com/en/blog/headless-drupal-nodejs-part-33-express-js-and-drupal-api-integration">Express JS and Drupal API integration</a></li>
+          </ul>
+        </li>
+        <li><a href="http://blog.openlucius.com/en/blog/headless-drupal-simple-contact-form-nodejs">A simple contact form in Node.js</a></li>
+      </ul>
+  </section>
 </section>
 
 			</div>
