--- a/reveal.js/drupal_performance.html
+++ b/reveal.js/drupal_performance.html
@@ -385,18 +385,18 @@ $conf['cache_class_cache_form'] = 'DrupalDatabaseCache'; // Non-volatile.
     <p style="text-align: left;">Dos formas:</p>
     <ul>
       <li>En producción, largo plazo</li>
-      <ul>
+      <ul style="font-size: 90%;">
         <li><a href="http://munin-monitoring.org/">Munin</a>: RAM, WebServer, etc...</li>
         <li><a href="http://www.projet-webdruid.org/">Webdruid</a>: WebServer+Varnish logs</li>
         <li>WebStats:</li>
         <p style="font-family: monospace; font-size: 60%; width: 1200px;">curl -o /dev/null -w %{time_total} -k midominio.com 2>/dev/null</p>
       </ul>
       <li>Stress tests puntuales</li>
-        <ul>
+        <ul style="font-size: 90%;">
           <li><a href="https://httpd.apache.org/docs/2.2/programs/ab.html">ApacheBench</a>, <a href="https://www.joedog.org/siege-home/">Siege</a>, <a href="https://github.com/wg/wrk">WRK</a>.</li>
           <li>sar (System Activity Report): <a href="https://packages.debian.org/jessie/sysstat">Debian</a>, <a href="http://sourceforge.net/projects/ksar/">Gráficos</a> y un <a href="http://www.linuxjournal.com/content/sysadmins-toolbox-sar">articulo</a></li>
           <ul><li style="font-size: 75%;"><a href="files/performance/siege_sar_StressTest.zip">Scripts de ejemplo</a></li></ul>
-          <li><a href="http://php.net/manual/en/book.xhprof.php">PHP Hierarchical Profiler</a> y su <a href="https://www.drupal.org/project/xhprof">módulo para Drupal</a></li>
+          <li><a href="http://php.net/manual/en/book.xhprof.php">XHProf</a> <span style="font-size: 75%;">(PHP Hierarchical Profiler)</span>, su <a href="https://www.drupal.org/project/xhprof">módulo</a> para Drupal e <a href="https://dev.acquia.com/blog/is-your-drupal-website-slow-find-the-bottleneck-with-xhprof/07/12/2015/8286">introducción</a></li>
         </ul>
     </ul>
   </section>
@@ -414,10 +414,20 @@ $conf['cache_class_cache_form'] = 'DrupalDatabaseCache'; // Non-volatile.
   <section>
     <h2>Servicios OnLine</h2>
     <ul>
-      <li>Servicios Online: <a href="http://newrelic.com/sp/brand">NewRelic</a> y <a href="https://loader.io/">Loader</a></li>
-      <li>Static assets: <a href="https://www.drupal.org/project/cloudfront">CloudFront</a>, <a href="https://www.drupal.org/project/cdn">CDN</a>, otros...</li>
-      <li><a href="https://www.drupal.org/project/amazons3">Amazon S3</a> o usar un "Media" server</li>
-      <li>Cloudflare: <a href="https://www.cloudflare.com/">Servicio</a> e <a href="https://www.drupal.org/project/cloudflare">integración Drupal</a></li>
+      <li>Análisis: <a href="http://newrelic.com/sp/brand">NewRelic</a> (simpler than xhprof)</li>
+      <li>Stress test: <a href="http://loadstorm.com/">Load Storm</a> y <a href="https://loader.io/">Loader</a></li>
+      <li>Static assets:
+        <ul>
+          <li><a href="https://www.drupal.org/project/cloudfront">CloudFront</a>, <a href="https://www.drupal.org/project/cdn">CDN</a>, otros...</li>
+          <li><a href="https://www.drupal.org/project/amazons3">Amazon S3</a> o usar un "Media" server</li>
+          <li>Cloudflare:
+            <ul style="font-size: 70%;">
+              <li><a href="https://www.cloudflare.com/">Servicio general</a></li>
+              <li><a href="https://www.drupal.org/project/cloudflare">Integración con Drupal</a> (servicio caching)</li>
+              <li><a href="https://www.drupal.org/project/cfpurge">Cloudflare Purge</a> y <a href="https://www.drupal.org/project/expire">Cache Expiration</a> <br><span style="margin-left:50px;">(para usarlo tipo Varnish)</span></li>
+            </ul>
+          </li>
+        </ul>
     </ul>
   </section>
   <section>
@@ -431,7 +441,9 @@ $conf['cache_class_cache_form'] = 'DrupalDatabaseCache'; // Non-volatile.
       <li><a href="files/performance/YSlow_Ok.png"><img src="files/performance/YSlow_Ok.png"/></a></li>
     </ul>
     <br>
-    <p>Módulo <a href="http://httpd.apache.org/docs/current/mod/mod_expires.html">Expire</a> y <a href="http://httpd.apache.org/docs/2.4/mod/mod_deflate.html">Deflate</a> (ambos de Apache)</p>
+    <p style="font-size:90%;">Módulos de apache que ayudan: <a href="http://httpd.apache.org/docs/current/mod/mod_expires.html">Expire</a> y <a href="http://httpd.apache.org/docs/2.4/mod/mod_deflate.html">Deflate</a></p>
+    <br>
+    <p style="font-size:90%;">Otros servicio similar (online): <a href="https://developers.google.com/speed/pagespeed/insights/">Google Page Speed</a></p>
   </section>
   <section>
     <h3>Todo esto para poder...</h3>
@@ -447,7 +459,8 @@ $conf['cache_class_cache_form'] = 'DrupalDatabaseCache'; // Non-volatile.
       <li>Drupalcon 2013 Portland: <br><span style="margin-left:4em"><a href="https://portland2013.drupal.org/node/2208.html">Performance testing</a> (<a href="https://portland2013.drupal.org/sites/default/files/slides/PerformanceTesting_0.pdf">Slides</a> + <a href="https://www.youtube.com/watch?v=YfgmJE27b74">YouTube</a>)</span></li>
       <li>Drupalcon 2014 Austin: <br><span style="margin-left:4em"><a href="https://austin2014.drupal.org/comment/2293.html">Planning for performance</a> (<a href="http://www.slideshare.net/jrbeeman/drupalcon-austin-planning-for-performance">Slides</a> + <a href="https://www.youtube.com/watch?v=AG7C7DoBt7Q">YouTube</a>)</span></li>
       <li>Drupal community docs: <a href="https://www.drupal.org/node/326504">Caching to improve performance</a></li>
-      <li><a href="http://colans.net/blog/drupal-7-performance-optimization-options-and-checklist">Drupal 7 Performance Optimization Options and Checklist</a></li>
+      <li><a href="http://colans.net/blog/drupal-7-performance-optimization-options-and-checklist">D7 Performance Optimization Options & Checklist</a></li>
+      <li><a href="https://www.lullabot.com/articles/a-php-developers-guide-to-caching-data-in-drupal-7">Usando Doctrine cache en Drupal 7</a> (coding)</li>
     </ul>
   </section>
 </section>
