Agregando la URL publica en github

--- a/reveal.js/drupal_performance.html
+++ b/reveal.js/drupal_performance.html
@@ -41,6 +41,8 @@
 <section>
   <section>
     <h1>Como mejorar la performance en Drupal</h1>
+    </br>
+    <p><a href="http://ibonelli.github.io/drupalstuff/">http://ibonelli.github.io/drupalstuff/</a></p>
   </section>
   <section>
     <h1>¿Quien soy yo?</h1>
