--- a/reveal.js/drupal_services.html
+++ b/reveal.js/drupal_services.html
@@ -43,6 +43,8 @@
     <h2>Usando Drupal como</h2>
     <h1>motor de servicios</h1>
     <h4>(XML, JSON, otros...)</h4>
+    </br>
+    <p><a href="http://ibonelli.github.io/drupalstuff/">http://ibonelli.github.io/drupalstuff/</a></p>
   </section>
   <section>
     <h1>¿Quien soy yo?</h1>
