Adding GTmetrix link

--- a/reveal.js/drupal_performance.html
+++ b/reveal.js/drupal_performance.html
@@ -41,7 +41,7 @@
 <section>
   <section>
     <h1>Como mejorar la performance en Drupal</h1>
-    </br>
+    <br>
     <p><a href="http://ibonelli.github.io/drupalstuff/">http://ibonelli.github.io/drupalstuff/</a></p>
   </section>
   <section>
@@ -433,7 +433,7 @@ $conf['cache_class_cache_form'] = 'DrupalDatabaseCache'; // Non-volatile.
     </ul>
   </section>
   <section>
-    <h3>Y del lado del web browser: <a href="http://yslow.org/">YSlow</a></h3>
+    <h3>Y del lado del web browser:<br><a href="http://yslow.org/">YSlow</a> o <a href="https://gtmetrix.com/">GTmetrix</a></h3>
     <ul class="col" style="width: 380px; display: inline-block; vertical-align: top; list-style-type: none;">
       <p>Sitio con problemas</p>
       <li><a href="files/performance/YSlow_NotOk.png"><img src="files/performance/YSlow_NotOk.png"/></a></li>
