Agregada una mejor comparacion entre D7 y D8. Y modificada la conclusion.

--- a/reveal.js/drupal_performance.html
+++ b/reveal.js/drupal_performance.html
@@ -189,16 +189,17 @@ drush cc
   <section>
     <h2>Drupal7 vs Drupal8</h2>
     <p style="text-align: left;">Articulos:</p>
-    <ul class="col" style="width: 500px; display: inline-block; vertical-align: top; list-style-type: none;">
+    <ul class="col" style="width: 400px; display: inline-block; vertical-align: top; list-style-type: none;">
       <a href="files/performance/Drupal7_vs_Drupal8.png"><img src="files/performance/Drupal7_vs_Drupal8.png"/></a>
     </ul>
-    <ul class="col" style="width: 300px; display: inline-block; vertical-align: top; font-size: 75%;">
+    <ul class="col" style="width: 400px; display: inline-block; vertical-align: top; font-size: 75%;">
+      <li><a href="http://www.jeffgeerling.com/blog/2016/yes-drupal-8-slower-drupal-7-heres-why">Yes, Drupal 8 is slower than Drupal 7 - here's why</a></li>
       <li><a href="http://wimleers.com/blog/drupal-8-page-caching-enabled-by-default">Drupal 8 now has page caching enabled by default</a></li>
       <li><a href="http://buytaert.net/making-drupal-8-fly">Making Drupal 8 fly</a></li>
       <li><a href="https://www.appnovation.com/blog/drupal-7-vs-drupal-8-performance-comparison">Drupal 7 vs Drupal 8 Performance Comparison</a></li>
       <li><a href="http://alexrayu.com/blog/drupal-739-vs-drupal-8-rc1-performance">Drupal 7.39 VS Drupal 8 RC1 Performance</a></li>
     </ul>
-    <p>En resumen: ¡Mucho mas rápido!</p>
+    <p style="font-size: 90%;">En resumen: D8 un poco mas lento, pero son comparables con misma funcionalidad. D8 tiene mejoras para trafico logueado y permite tecnologías como <a href="https://www.drupal.org/documentation/modules/big_pipe">bigpipe</a> que pueden acelerarlo.</p>
   </section>
 </section>
 <section>
