--- a/reveal.js/drupal_performance.html
+++ b/reveal.js/drupal_performance.html
@@ -283,7 +283,8 @@ drush cc
       <li><a href="https://www.drupal.org/project/varnish">Varnish</a>: 100% Varnish compatible.</li>
       <li><a href="https://www.drupal.org/project/purge">Purge</a> + <a href="https://www.drupal.org/project/expire">Expire</a>: Anda para las otras soluciones.</li>
     </ul>
-    <p style="text-align: left;">Ej. de configuración: <a href="https://www.digitalocean.com/community/tutorials/how-to-speed-up-your-drupal-7-website-with-varnish-4-on-ubuntu-14-04-and-debian-7">DigitalOcean</a> y <a href="https://www.varnish-cache.org/trac/wiki/VarnishAndDrupal">varnish-cache.org</a> </p>
+    <p style="text-align: left;">Ej. de configuración: <a href="https://www.digitalocean.com/community/tutorials/how-to-speed-up-your-drupal-7-website-with-varnish-4-on-ubuntu-14-04-and-debian-7">DigitalOcean</a> y <a href="https://www.varnish-cache.org/trac/wiki/VarnishAndDrupal">varnish-cache.org</a></p>
+    <p style="text-align: left;">Alternativas como servicios: <a href="https://www.cloudflare.com/website-optimization/"></a>CloudFlare: CDN web frontend for optimization</p>
   </section>
   <section>
     <h1>¿Caching SSL?</h1>
