--- a/reveal.js/drupal_performance.html
+++ b/reveal.js/drupal_performance.html
@@ -284,7 +284,7 @@ drush cc
       <li><a href="https://www.drupal.org/project/purge">Purge</a> + <a href="https://www.drupal.org/project/expire">Expire</a>: Anda para las otras soluciones.</li>
     </ul>
     <p style="text-align: left;">Ej. de configuración: <a href="https://www.digitalocean.com/community/tutorials/how-to-speed-up-your-drupal-7-website-with-varnish-4-on-ubuntu-14-04-and-debian-7">DigitalOcean</a> y <a href="https://www.varnish-cache.org/trac/wiki/VarnishAndDrupal">varnish-cache.org</a></p>
-    <p style="text-align: left;">Alternativas como servicios: <a href="https://www.cloudflare.com/website-optimization/"></a>CloudFlare: CDN web frontend for optimization</p>
+    <br/><p style="text-align: left; font-size: 70%;">Alternativas a Varnish como un servicio online: <a href="https://www.cloudflare.com/website-optimization/">CloudFlare</a> (<a href="#/3/2">Mas información en slide de Servicios OnLine</a>)</p>
   </section>
   <section>
     <h1>¿Caching SSL?</h1>
@@ -424,7 +424,7 @@ $conf['cache_class_cache_form'] = 'DrupalDatabaseCache'; // Non-volatile.
         <ul>
           <li><a href="https://www.drupal.org/project/cloudfront">CloudFront</a>, <a href="https://www.drupal.org/project/cdn">CDN</a>, otros...</li>
           <li><a href="https://www.drupal.org/project/amazons3">Amazon S3</a> o usar un "Media" server</li>
-          <li>Cloudflare:
+          <li>Cloudflare (CDN web frontend):
             <ul style="font-size: 70%;">
               <li><a href="https://www.cloudflare.com/">Servicio general</a></li>
               <li><a href="https://www.drupal.org/project/cloudflare">Integración con Drupal</a> (servicio caching)</li>
